[package]
name = "firestoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
openapiv3 = "1.0.1"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde_json = "1.0.85"
